--- a/site/index.html
+++ b/site/index.html
@@ -23,7 +23,18 @@
 
     <!-- -->
     <!-- -->
+    <body>
+        <div class="container">
+            <h1 class="text-center">Juego del Círculo</h1>
+            <div class="game-area">
+                <div id="circle"></div>
+            </div>
+        </div>
 
+        <!-- Enlace a Bootstrap y archivo JavaScript -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="app.js"></script>
+    </body>
     <!-- -->
     <!-- -->
 
