--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
-    <title>Rifas</title>
+    <title>Moyi</title>
 </head>
 
 <body class="no-scroll ">
@@ -25,7 +25,7 @@
     <!-- -->
     <body>
         <div class="container">
-            <h1 class="text-center">Juego del Círculo</h1>
+            <h1 class="text-center">Moyi</h1>
             <div class="game-area">
                 <div id="circle"></div>
             </div>
