--- a/site/index.html
+++ b/site/index.html
@@ -23,30 +23,29 @@
 
     <!-- -->
     <!-- -->
-    <body>
-        <div class="container">
-            <h1 class="text-center">Moyi</h1>
-            <div class="game-area">
-                <div id="circle"></div>
-            </div>
+    <div class="container">
+        <h1 class="text-center">Juego del Círculo</h1>
+        <div class="game-area">
+            <div id="circle"></div>
         </div>
+    </div>
 
-        <!-- Enlace a Bootstrap y archivo JavaScript -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="app.js"></script>
-    </body>
-    <!-- -->
-    <!-- -->
-
-    <!-- -->
-    <!-- -->
-    <!-- -->
-    <!-- -->
-    <script src="code.js"></script>
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <!-- Enlace a Bootstrap y archivo JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- -->
-    <!-- -->
+    <script src="app.js"></script>
+</body>
+<!-- -->
+<!-- -->
+
+<!-- -->
+<!-- -->
+<!-- -->
+<!-- -->
+<script src="code.js"></script>
+<script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<!-- -->
+<!-- -->
 </body>
 
 </html>
